syntax = "proto3";

package quantumtimesandwich;

service QuantumEncryptionService {
    rpc GenerateKey(GenerateKeyRequest) returns (GenerateKeyResponse);
    rpc EncryptMessage(EncryptionRequest) returns (EncryptionResponse);
    rpc DecryptMessage(DecryptionRequest) returns (DecryptionResponse);
    rpc PrepareQuantumState(PrepareStateRequest) returns (PrepareStateResponse);
    rpc MeasureQuantumState(MeasureStateRequest) returns (MeasureStateResponse);
}

message GenerateKeyRequest {
    // Fields for GenerateKeyRequest
}

message GenerateKeyResponse {
    string key = 1;
}

message EncryptionRequest {
    string message = 1;
}

message EncryptionResponse {
    string encryptedMessage = 1;
}

message DecryptionRequest {
    string encryptedMessage = 1;
}

message DecryptionResponse {
    string message = 1;
}

message PrepareStateRequest {
    // Define the fields needed for the state preparation request
}

message PrepareStateResponse {
    // Define the fields for the response (e.g., success status, error message)
}

message MeasureStateRequest {
    // Define the fields needed for the state measurement request
}

message MeasureStateResponse {
    // Define the fields for the response (e.g., success status, error message)
}
