use tonic::{transport::Server, Request, Response, Status};

pub mod quantumtimesandwich {
    tonic::include_proto!("quantumtimesandwich");
}

use quantumtimesandwich::{QuantumEncryptionService, EncryptionRequest, EncryptionResponse, DecryptionRequest, DecryptionResponse};

// Import QuantumTimeSandwich cryptography modules here.
// use quantumtimesandwich::complex_key;

#[derive(Default)]
pub struct MyQuantumEncryptionService {}

#[tonic::async_trait]
impl QuantumEncryptionService for MyQuantumEncryptionService {
    async fn encrypt_message(&self, request: Request<EncryptionRequest>) -> Result<Response<EncryptionResponse>, Status> {
        let message = request.into_inner().message;

        // Encrypt the message using QuantumTimeSandwich's encryption module.
        let encrypted_message = "encrypted_data"; // Replace with actual encryption logic.

        Ok(Response::new(EncryptionResponse { encrypted_message }))
    }

    async fn decrypt_message(&self, request: Request<DecryptionRequest>) -> Result<Response<DecryptionResponse>, Status> {
        let encrypted_message = request.into_inner().encrypted_message;

        // Decrypt the message using QuantumTimeSandwich's decryption module.
        let message = "decrypted_data"; // Replace with actual decryption logic.

        Ok(Response::new(DecryptionResponse { message }))
    }
}

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    let addr = "[::1]:50051".parse()?;
    let service = MyQuantumEncryptionService::default();

    Server::builder()
        .add_service(QuantumEncryptionServiceServer::new(service))
        .serve(addr)
        .await?;

    Ok(())
}
